updated css to fix row gap

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     align-items: center;
     margin-top: 112px;
     flex-direction: column;
-    row-gap: 48px;
+    row-gap: 40px;
 }
 
 .button-row {
